[#2] Improved appearance of site, modals, fixed too long names

--- a/frontend/rflow_react/src/styles/AddEditDiagramModal.css
+++ b/frontend/rflow_react/src/styles/AddEditDiagramModal.css
@@ -48,3 +48,12 @@
 .form-group + .form-group {
     margin-top: 20px; 
 }
+
+.current-file{
+    word-break: break-all;
+    margin-top: 20px;
+}
+
+.current-file-path {
+    margin-top: 5px;
+}
